--- a/serverless.yml
+++ b/serverless.yml
@@ -1,17 +1,18 @@
 service: pythonlambda
 
-frameworkVersion: '3'
+frameworkVersion: "3"
 
 provider:
   name: aws
   runtime: python3.8
+  region: us-east-2
   stage: dev
- 
+
 functions:
   api:
     handler: app.handler
     events:
-      - httpApi: '*'
+      - httpApi: "*"
 
 plugins:
   - serverless-python-requirements
